fixed selected styles but only visible in console

--- a/src/components/Group/Group.module.css
+++ b/src/components/Group/Group.module.css
@@ -23,6 +23,7 @@
     /* margin-left: 1rem; */
     background-color: rgba(47,47,47,0.17);
     border-radius: 0.75rem;
+    margin-bottom: 1rem;
     width: 99.5%; 
   }
   
