--- a/src/components/GroupNotes/GroupNotes.module.css
+++ b/src/components/GroupNotes/GroupNotes.module.css
@@ -11,7 +11,7 @@
 .topBar {
     width: 70vw;
     background-color: #001F8B;
-    height: 8vh;
+    height: 15vh;
 }
 
 .notesArea{
@@ -55,7 +55,7 @@
 
   .note{
     position: relative;
-    height: 22.5%;
+    height: 30%;
     width: 97%;
     background-color: #ffffff;
     box-shadow: 0px 0px 2px  #000000;
